--- a/services/pom.xml
+++ b/services/pom.xml
@@ -60,5 +60,18 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se</artifactId>
+            <version>2.4.5.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
+        </dependency>
     </dependencies>
+    <properties>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </properties>
 </project>
