--- a/services/pom.xml
+++ b/services/pom.xml
@@ -24,6 +24,18 @@
     <artifactId>services</artifactId>
     <dependencies>
         <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.main.extras</groupId>
+            <artifactId>glassfish-embedded-all</artifactId>
+            <version>5.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>2.6.4</version>
@@ -47,17 +59,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
         <dependency>
@@ -70,7 +71,7 @@
             <artifactId>mockito-core</artifactId>
             <version>1.10.19</version>
         </dependency>
-    </dependencies>
+      </dependencies>
     <properties>
         <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
